--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "jquery": "^3.4.1"
+        "jquery": "^3.4.1",
+        "blueimp-load-image": "^2.26.0",
+        "quill": "^1.3.7"
     }
 }
